--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/checkout@v2.3.4
 
     - name: Build wheels
-      uses: Claret-Srl/wheels@claret
+      uses: claret-srl/wheels@claret
       with:
         tag: ${{ env.WHEELS_TAG }}
         arch: ${{ matrix.arch }}
